--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
 						<exclude>mvnw.cmd</exclude>
 						<exclude>mvnw</exclude>
 						<exclude>.apt_generated/**</exclude>
+						<exclude>.editorconfig</exclude>
 					</excludes>
 					<strictCheck>true</strictCheck>
 				</configuration>
