--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
-			<version>3.9.0</version>
+			<version>3.9.1</version>
 		</dependency>
 
 		<dependency>
@@ -76,7 +76,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.2</version>
+				<version>3.7.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -139,6 +139,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.0.2</version>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>ch.rasc.piwik</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
+				</configuration>				
 			</plugin>
 
 			<plugin>
@@ -157,10 +164,10 @@
 				<configuration>
 					<header>${basedir}/src/main/config/header.txt</header>
 					<properties>
-						<owner>Ralph Schaer</owner>
+						
 						<year>${project.inceptionYear}</year>
 						<currentYear>2017</currentYear>
-						<email>ralphschaer@gmail.com</email>
+						
 					</properties>
 					<excludes>
 						<exclude>**/*.xml</exclude>
