--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,24 +8,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Java 13
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v4
+    - name: Set up Java 21
+      uses: actions/setup-java@v4
       with:
-        java-version: 13
-    - name: Build with Java 13
+        distribution: 'temurin'
+        java-version: 21
+    - name: Build with Java 21
+      run: ./mvnw -B clean test --file pom.xml    	
+    - name: Set up Java 17
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: 17
+    - name: Build with Java 17
       run: ./mvnw -B clean test --file pom.xml        
     - name: Set up Java 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
+        distribution: 'temurin'
         java-version: 11
     - name: Build with Java 11
       run: ./mvnw -B clean test --file pom.xml    
-    - name: Set up Java 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build with Java 1.8
-      run: ./mvnw -B clean test --file pom.xml
     - name: Deploy to Sonatype
       run: ./mvnw -B -Drepo.username=${{secrets.SONATYPE_USERNAME}} -Drepo.password=${{secrets.SONATYPE_PASSWORD}} clean deploy -DskipTests=true --settings mySettings.xml
